@@ -57,68 +57,7 @@
 #include "config.h"
 #endif
 
-#include <gst/gst.h>
-#include <gst/base/gstadapter.h>
-
-#include <string.h>
-
-#define GST_TYPE_MULTIPART_DEMUX (gst_multipart_demux_get_type())
-#define GST_MULTIPART_DEMUX(obj) (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_MULTIPART_DEMUX, GstMultipartDemux))
-#define GST_MULTIPART_DEMUX_CLASS(klass) (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_MULTIPART_DEMUX, GstMultipartDemux))
-#define GST_IS_MULTIPART_DEMUX(obj) (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_MULTIPART_DEMUX))
-#define GST_IS_MULTIPART_DEMUX_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass),GST_TYPE_MULTIPART_DEMUX))
-
-typedef struct _GstMultipartDemux GstMultipartDemux;
-typedef struct _GstMultipartDemuxClass GstMultipartDemuxClass;
-
-#define MULTIPART_NEED_MORE_DATA -1
-#define MULTIPART_DATA_ERROR     -2
-#define MULTIPART_DATA_EOS       -3
-
-/* all information needed for one multipart stream */
-typedef struct
-{
-  GstPad *pad;                  /* reference for this pad is held by element we belong to */
-
-  gchar *mime;
-}
-GstMultipartPad;
-
-/**
- * GstMultipartDemux:
- *
- * The opaque #GstMultipartDemux structure.
- */
-struct _GstMultipartDemux
-{
-  GstElement element;
-
-  /* pad */
-  GstPad *sinkpad;
-
-  GSList *srcpads;
-  gint numpads;
-
-  GstAdapter *adapter;
-
-  /* Header information of the current frame */
-  gboolean header_completed;
-  gchar *boundary;
-  guint boundary_len;
-  gchar *mime_type;
-  gint content_length;
-
-  /* deprecated, unused */
-  gboolean autoscan;
-
-  /* Index inside the current data when manually looking for the boundary */
-  gint scanpos;
-};
-
-struct _GstMultipartDemuxClass
-{
-  GstElementClass parent_class;
-};
+#include "multipartdemux.h"
 
 GST_DEBUG_CATEGORY_STATIC (gst_multipart_demux_debug);
 #define GST_CAT_DEFAULT gst_multipart_demux_debug
