@@ -1,5 +1,15 @@
 2008-01-15  Stefan Kost  <ensonic@users.sf.net>
 
+	* docs/plugins/gst-plugins-good-plugins-sections.txt:
+	* gst/multipart/Makefile.am:
+	* gst/multipart/multipartdemux.c:
+	* gst/multipart/multipartdemux.h:
+	* gst/multipart/multipartmux.c:
+	* gst/multipart/multipartmux.h:
+	  Re-add multipartdemux to the docs. Last round of section cleanup.
+
+2008-01-15  Stefan Kost  <ensonic@users.sf.net>
+
 	* docs/plugins/Makefile.am:
 	* docs/plugins/gst-plugins-good-plugins-sections.txt:
 	* sys/osxaudio/gstosxaudiosink.h:
